--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
       sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
-   background-color: rgb(105, 105, 105);
+   background-image: linear-gradient(to bottom, #323663, #323663 80%, #83698C);
+   background-attachment: fixed;
 }
 
 code {
