--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -4,7 +4,7 @@
    padding: 20px;
    min-height: 220px;
 
-   background-color: #e7dfdf;
+   background-color: #b39e9e;
    border-radius: 10px;
    box-shadow: 0 3px 8px rgb(0 0 0 / 24%);
 }
