--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,10 +1,11 @@
 .container {
-   padding: 15px 30px;
+   padding: 15px 10px;
 }
 
 
 .title {
    text-align: center;
-   text-decoration: underline;
+   color: #00000080;
+   font-style: italic;
 
 }
