--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -6,9 +6,26 @@
 
 .input {
    display: block;
-   margin: 0 auto 10px;
-   padding: 6px 15px;
-   border: none;
-   border-radius: 10px;
-   background-color: rgb(243, 242, 242);
+   width: 230px;
+   background-color: inherit;
+   border: 0;
+   margin: 0 auto 15px;
+   padding: 7px 0;
+   outline: none;
+   border-bottom: 1px solid #ccc;
+}
+
+.input[type='text']~.inputFocusFilter {
+   position: absolute;
+   top: 388px;
+   left: 560px;
+   width: 0;
+   height: 2px;
+   background-color: rgb(63, 40, 40);
+   transition: 0.4s;
+}
+
+.input[type='text']:focus~.inputFocusFilter {
+   width: 230px;
+   transition: 0.4s;
 }
